REGRESSION(r279987): [GTK][WPE] It caused 2 new test failures https://bugs.webkit.org/show_bug.cgi?id=228160

Reviewed by Michael Catanzaro.

Normally adjustText*() are only called for unstyled elements to adjust their platform
appearance, However, for entries we always call it since
https://bugs.webkit.org/show_bug.cgi?id=173572 and it causes problems.

That change was done for RenderThemeGtk and is not relevant anymore, so we can revert
it.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle):


Canonical link: https://commits.webkit.org/240328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280742 268f45cc-cd09-0410-ab3c-d52691b4dbfc